--- a/src/Components/MediaGridComponent/MediaGrid.css
+++ b/src/Components/MediaGridComponent/MediaGrid.css
@@ -9,3 +9,9 @@
     align-content: center;
     justify-content: center;
 }
+
+@media (max-width: 599px) {
+    .MediaGridContainer{
+        justify-content: space-around;
+    }
+}
